# ros2-control-vcan-motor-demo

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
docs/: hardware-can.md
docs/history/: 001-vcan-diffbot-demo.md  002-control-review-fixes.md  003-bench-manual.md  004-demo-evidence.md  005-engineering-hardening.md
docs/superpowers/plans/: 2026-07-17-vcan-diffbot-demo.md  2026-07-18-code-review-fixes.md  2026-07-18-engineering-hardening.md  2026-07-18-readme-bench-manual.md
docs/superpowers/specs/: 2026-07-17-vcan-diffbot-demo-design.md  2026-07-18-code-review-fixes-design.md  2026-07-18-engineering-hardening-design.md  2026-07-18-readme-bench-manual-design.md
src/vcan_diffbot_demo/: CMakeLists.txt  package.xml  vcan_diffbot_demo.xml
src/vcan_diffbot_demo/config/: controllers.yaml  virtual_motor.yaml
src/vcan_diffbot_demo/include/vcan_diffbot_demo/: can_error_policy.hpp  can_filters.hpp  can_motor_hardware.hpp  can_protocol.hpp  hardware_health.hpp  motor_state.hpp
src/vcan_diffbot_demo/launch/: demo.launch.py
src/vcan_diffbot_demo/scripts/: setup_vcan.sh
src/vcan_diffbot_demo/src/: can_motor_hardware.cpp  virtual_motor_node.cpp
src/vcan_diffbot_demo/test/: launch_test_stubs.py  test_ack_timeout_launch.py  test_can_busoff_launch.py  test_can_error_policy.cpp  test_can_filters.cpp  test_can_protocol.cpp  test_demo_launch.py  test_demo_launch_arguments.py  test_diagnostics_launch.py  test_feedback_timeout_launch.py  test_hardware_health.cpp  test_hardware_plugin.cpp  test_invalid_fault_selector_launch.py  test_motor_state.cpp  test_urdf_xacro.py  test_vcan_test_utils.py  test_virtual_motor_node.py  vcan_test_utils.py
src/vcan_diffbot_demo/urdf/: diffbot.ros2_control.xacro  diffbot.urdf.xacro
